--- a/shared/svg.html
+++ b/shared/svg.html
@@ -1,10 +1,29 @@
 <svg style="display: none;">
-  <symbol id="arrow-icon" viewBox="0 0 48 48">
-    <circle cx="24" cy="24" r="24" fill="black" />
-    <polyline points="20,16 28,24 20,32" fill="none" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+  <!-- チェックマークアイコン -->
+  <symbol id="icon-check" viewBox="0 0 24 24">
+    <polyline points="4 12 10 18 20 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+
+  <!-- 右向き矢印アイコン -->
+  <symbol id="icon-arrow" viewBox="0 0 24 24">
+    <polyline points="8 4 16 12 8 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </symbol>
+  
+    <!-- シンプルな直線矢印アイコン -->
+  <symbol id="icon-arrow-simple" viewBox="0 0 24 24">
+    <line x1="4" y1="12" x2="20" y2="12" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
+    <polyline points="14,6 20,12 14,18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
   </symbol>
 </svg>
 
-<svg width="48" height="48">
-  <use xlink:href="#arrow-icon" />
+<svg width="24" height="24">
+  <use xlink:href="#icon-check" />
+</svg>
+
+<svg width="24" height="24">
+  <use xlink:href="#icon-arrow" />
+</svg>
+
+<svg width="24" height="24">
+  <use xlink:href="#icon-arrow-simple" />
 </svg>
