アイコン関連

--- a/shared/svg.html
+++ b/shared/svg.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="components.css">
+<link rel="stylesheet" href="base.css">
+
 <svg style="display: none;">
   <!-- チェックマークアイコン -->
   <symbol id="icon-check" viewBox="0 0 24 24">
@@ -19,14 +22,17 @@
   </symbol>
 </svg>
 
-<svg width="24" height="24">
-  <use xlink:href="#icon-check" />
+<!-- チェックマークアイコン 設置例 -->
+<svg class="icon-check">
+  <use xlink:href="#icon-check"></use>
 </svg>
 
+<!-- 右向き矢印アイコン 設置例 -->
 <svg width="24" height="24">
   <use xlink:href="#icon-arrow" />
 </svg>
 
+<!-- シンプルな直線矢印アイコン 設置例 -->
 <svg width="24" height="24">
   <use xlink:href="#icon-arrow-simple" />
 </svg>
