アイコン関連

--- a/shared/svg.html
+++ b/shared/svg.html
@@ -22,17 +22,21 @@
   </symbol>
 </svg>
 
-<!-- チェックマークアイコン 設置例 -->
+<!-- チェックマークアイコン -->
 <svg class="icon-check">
   <use xlink:href="#icon-check"></use>
 </svg>
 
-<!-- 右向き矢印アイコン 設置例 -->
+<!-- 右向き矢印アイコン -->
+<svg class="icon-arrow">
+  <use xlink:href="#icon-arrow"></use>
+</svg>
+
 <svg width="24" height="24">
   <use xlink:href="#icon-arrow" />
 </svg>
 
-<!-- シンプルな直線矢印アイコン 設置例 -->
+<!-- シンプルな直線矢印アイコン -->
 <svg width="24" height="24">
   <use xlink:href="#icon-arrow-simple" />
 </svg>
