--- a/shared/svg.html
+++ b/shared/svg.html
@@ -1,20 +1,24 @@
 <link rel="stylesheet" href="components.css">
 <link rel="stylesheet" href="base.css">
 
+<!-- チェックマークアイコン（SVGスプライト定義） -->
 <svg style="display: none;">
-  <!-- チェックマークアイコン -->
   <symbol id="icon-check" viewBox="0 0 24 24">
     <polyline points="4 12 10 18 20 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
       stroke-linejoin="round" />
   </symbol>
+</svg>
 
-  <!-- 右向き矢印アイコン -->
+<!-- 右向き矢印アイコン（SVGスプライト定義） -->
+<svg style="display: none;">
   <symbol id="icon-arrow" viewBox="0 0 24 24">
     <polyline points="8 4 16 12 8 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
       stroke-linejoin="round" />
   </symbol>
+</svg>
 
-  <!-- シンプルな直線矢印アイコン -->
+<!-- シンプルな直線矢印アイコン（SVGスプライト定義） -->
+<svg style="display: none;">
   <symbol id="icon-arrow-simple" viewBox="0 0 24 24">
     <line x1="4" y1="12" x2="20" y2="12" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
     <polyline points="14,6 20,12 14,18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -32,11 +36,7 @@
   <use xlink:href="#icon-arrow"></use>
 </svg>
 
-<svg width="24" height="24">
-  <use xlink:href="#icon-arrow" />
-</svg>
-
 <!-- シンプルな直線矢印アイコン -->
-<svg width="24" height="24">
+<svg class="icon-arrow-simple">
   <use xlink:href="#icon-arrow-simple" />
 </svg>
