いろいろ修正

--- a/shared/svg.html
+++ b/shared/svg.html
@@ -9,15 +9,15 @@
   </symbol>
 </svg>
 
-<!-- 右向き矢印アイコン（SVGスプライト定義） -->
+<!-- ＞アイコン（SVGスプライト定義） -->
 <svg style="display: none;">
-  <symbol id="icon-arrow" viewBox="0 0 24 24">
+  <symbol id="icon-chevron" viewBox="0 0 24 24">
     <polyline points="8 4 16 12 8 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
       stroke-linejoin="round" />
   </symbol>
 </svg>
 
-<!-- シンプルな直線矢印アイコン（SVGスプライト定義） -->
+<!-- 右向き矢印アイコン（SVGスプライト定義） -->
 <svg style="display: none;">
   <symbol id="icon-arrow-simple" viewBox="0 0 24 24">
     <line x1="4" y1="12" x2="20" y2="12" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
@@ -31,12 +31,12 @@
   <use xlink:href="#icon-check"></use>
 </svg>
 
-<!-- 右向き矢印アイコン -->
-<svg class="icon-arrow">
-  <use xlink:href="#icon-arrow"></use>
+<!-- ＞アイコン -->
+<svg class="icon-chevron">
+  <use xlink:href="#icon-chevron"></use>
 </svg>
 
-<!-- シンプルな直線矢印アイコン -->
-<svg class="icon-arrow-simple">
-  <use xlink:href="#icon-arrow-simple" />
+<!-- 右向き矢印アイコン -->
+<svg class="icon-arrow">
+  <use xlink:href="#icon-arrow" />
 </svg>
