クラス名を整理

--- a/test/test.html
+++ b/test/test.html
@@ -10,7 +10,8 @@
 </head>
 
 <body style="position: relative;">
-    <div class="gradient-bg"></div>
+    <!-- 円形グラデーション背景 -->
+    <div class="radial-gradient-bg"></div>
 </body>
 
 </html>
