--- a/shared/svg.html
+++ b/shared/svg.html
@@ -19,7 +19,7 @@
 
 <!-- 右向き矢印アイコン（SVGスプライト定義） -->
 <svg style="display: none;">
-  <symbol id="icon-arrow-simple" viewBox="0 0 24 24">
+  <symbol id="icon-arrow" viewBox="0 0 24 24">
     <line x1="4" y1="12" x2="20" y2="12" stroke="currentColor" stroke-width="2" stroke-linecap="round" />
     <polyline points="14,6 20,12 14,18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
       stroke-linejoin="round" />
