--- a/shared/components.html
+++ b/shared/components.html
@@ -41,6 +41,15 @@
   <use xlink:href="#icon-arrow" />
 </svg>
 
+<!-- シンプルボタン -->
+<a href="#" class="btn-simple">
+  <span class="btn-text">買取査定・お見積り</span>
+  <svg class="btn-simple__icon">
+    <use href="#icon-arrow" />
+  </svg>
+</a>
+<!-- /シンプルボタン -->
+
 <!-- くるっと一回転ボタン -->
 <div class="btn-flip">
   <span class="btn-flip-wrap">
