--- a/test/test.html
+++ b/test/test.html
@@ -4,59 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>サービス</title>
+    <title>テスト</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../shared/base.css">
     <script src="script.js"></script>
 
-    <!-- Googleフォント -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500;700;800;900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700;900&display=swap"
         rel="stylesheet">
-    <!-- /Googleフォント -->
-
-    <!-- 車のアイコン（定義） -->
-    <svg style="display: none;" xmlns="http://www.w3.org/2000/svg">
-        <symbol id="icon-car" viewBox="0 0 4628.75 3359.66">
-            <path fill="currentColor" d="M4628.33,910.33c0-47.59-16.55-111.73-120-111.73h-370.35c-40.19,0-68.43,23.91-87.18,49.6
-      l-323.69-532.91c-34.88-57.43-77.21-110-125.87-156.33h0C3459.52,24.02,3271.32,0,3075.63,0h-1522.51
-      c-195.69,0-383.89,24.02-525.61,158.96h0c-48.66,46.33-90.99,98.9-125.87,156.33l-323.69,532.91
-      c-18.75-25.69-46.98-49.6-87.18-49.6H120.42C16.96,798.6.41,862.74.41,910.33S-.06,1024.74,0,1033.22
-      c.23,28.93,9.52,104.26,99.72,106.77,81.62,2.27,227.81,1.22,300.69.49l-52.85,87.01
-      c-44.44,70.14-82.87,143.9-114.91,220.5h0c-75.44,180.4-114.29,373.99-114.29,569.53v1225.68
-      c0,64.32,52.14,116.45,116.45,116.45h487.41c64.32,0,116.45-52.14,116.45-116.45v-271.95h2951.37v271.95
-      c0,64.32,52.14,116.45,116.45,116.45h487.41c64.32,0,116.45-52.14,116.45-116.45v-418.03h0v-807.65
-      c0-195.54-38.85-389.13-114.29-569.53h0c-32.03-76.6-70.47-150.36-114.91-220.5l-52.85-87.01
-      c72.88.73,219.08,1.77,300.69-.49,90.2-2.51,99.49-77.83,99.72-106.77.07-8.49-.41-73.21-.41-122.89Z" />
-        </symbol>
-    </svg>
-
-
-
-
-    <svg style="display: none;">
-        <!-- チェックマークアイコン（定義） -->
-        <symbol id="icon-check" viewBox="0 0 24 24">
-            <polyline points="4 12 10 18 20 6" fill="none" stroke="currentColor" stroke-width="5" stroke-linecap="round"
-                stroke-linejoin="round" />
-        </symbol>
-
-        <!-- 右向き矢印アイコン（定義） -->
-        <symbol id="icon-arrow" viewBox="0 0 24 24">
-            <line x1="4" y1="12" x2="20" y2="12" stroke="currentColor" stroke-width="3" stroke-linecap="round" />
-            <polyline points="14,6 20,12 14,18" fill="none" stroke="currentColor" stroke-width="3"
-                stroke-linecap="round" stroke-linejoin="round" />
-        </symbol>
-    </svg>
 
 </head>
 
-<body class="container">
+<body class="inner">
 
+    <!-- 見出し -->
+    <h2 class="heading-01">
+        <span class="heading-main">KAM・パートナーズの想い</span>
+        <span class="heading-sub">OUR VISION</span>
+    </h2>
+    <!-- /見出し -->
 
-
+    <p>現在医療機関を取り巻く経営環境は、かつてない厳しさを増しています。少子高齢化に加え、新型コロナウイルス以降の受診控え、慢性的な人材不足、そして世界的な物価高騰――。診療報酬の見直しを含む国主導の医療費抑制政策の影響もあり、患者数の減少とコスト増加という二重の打撃を多くの病院・クリニックが受けています。<br>質の高い医療を持続的に提供するためには、経営の健全化が不可欠です。とりわけ、限られた収入の中でどうコストを抑えるかが、生き残りの鍵を握っています。また医療材料費の適正化は非常に有効な手段でありながら、地域や法人規模により価格差が大きく、現場での対応には限界があります。<br>当社は、独自のベンチマークシステムと広範なネットワークを駆使し、医療機関とサプライヤーの間に立ち、直接交渉・コンペを実施。品質を維持しつつ、適正価格での安定調達を実現し、医療材料費の削減に貢献いたします。<br>また、医療・福祉分野に特化したリーダーシップ研修、ハラスメント防止、接遇指導、人事・考課者研修、社会福祉法人向けの会計・経営・組織論など、多様なテーマでの研修・セミナーの企画・運営も行っており、戸別訪問型の実施研修にも対応し、現場に即した実践的な人材育成をお手伝いします。さらに、医療法人の設立や解散などの手続きについても、専門家との連携のもとでご相談を承っており、制度面からも経営の安定化を支援します。
+    </p>
 </body>
 
 </html>
